# GameEngine

./: .gitignore  configure.in  make.py  make.sh  makefile
CenterServer/: threadproto.h
ChatServer/: makefile
DLL/: DLL.vcxproj  DLL.vcxproj.filters  export.cpp  export.h
DataServer/: make.py  makefile  新建文本文档.txt
DatabaseServer/: make.py  makefile
GameServer/: define.h  make.py  make.py~  makefile
GuiMi/: define.h
LoginServer/: Makefile.am  config.h.in  configure  configure.ac  make.py  makefile
LoginServer/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
LoginServer/frame/: loginframe.cpp  loginframe.h  main.cpp
LoginServer/message/messagefunction/: messagehandler.cpp  messagehandler.h
LoginServer/message/messagetype/: msglogin.h
Project/: CenterProxy.vcxproj  CenterProxy.vcxproj.filters  CenterServer.vcxproj  CenterServer.vcxproj.filters  ChatServer.vcxproj  ChatServer.vcxproj.filters  Client.vcxproj  Client.vcxproj.filters  DataBaseServer.vcxproj  DataBaseServer.vcxproj.filters  DataServer.filters  DataServer.vcxproj  DataServer.vcxproj.filters  GameEngine.sln  GameEngine_VS2012.sln  GameServer.vcxproj  GameServer.vcxproj.filters  GatewayServer.vcxproj  GatewayServer.vcxproj.filters  GlobalServer.vcxproj  GlobalServer.vcxproj.filters  GuiMi.vcxproj  GuiMi.vcxproj.filters  LoginServer.vcxproj  LoginServer.vcxproj.filters  Proxy.vcxproj  Proxy.vcxproj.filters  Query.vcxproj  Query.vcxproj.filters  SceneServer.vcxproj  SceneServer.vcxproj.filters  Test.vcxproj  Test.vcxproj.filters  UpgradeLog.htm  XiMiYou.filters  (+2 more)
(+967 files in other folders)
