#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([LoginServer], [1.0], [374826954@qq.com])
AM_INIT_AUTOMAKE([LoginServer],[1.0])
AC_CONFIG_SRCDIR([frame/loginframe.cpp])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_CHECK_HEADER_STDBOOL

# Checks for library functions.
AC_CHECK_FUNCS([memset])
AC_CONFIG_FILES([MakeFile])
AC_OUTPUT
